[gd_scene load_steps=14 format=3 uid="uid://bak0wq7qpvfkq"]

[ext_resource type="Script" path="res://level_2.gd" id="1_srq5y"]
[ext_resource type="AudioStream" uid="uid://becs3pmi6s7rj" path="res://Music/BGM/all.mp3" id="2_2dihh"]
[ext_resource type="PackedScene" uid="uid://jxaid0s13ejq" path="res://hud.tscn" id="2_oibbv"]
[ext_resource type="Texture2D" uid="uid://b8bkt3abgra6k" path="res://Art/Level_2.png" id="4_ghilw"]
[ext_resource type="PackedScene" uid="uid://4ehixoj5k31m" path="res://Player/sola.tscn" id="5_4254d"]
[ext_resource type="PackedScene" uid="uid://cqul01thxosc3" path="res://Lamp.tscn" id="6_drrrc"]
[ext_resource type="Texture2D" uid="uid://ce0os1mvffj2q" path="res://Art/Black gradient.png" id="6_mnwns"]
[ext_resource type="PackedScene" uid="uid://csethspg6l3lt" path="res://dialogue.tscn" id="6_yqxfd"]
[ext_resource type="PackedScene" uid="uid://d8nkndsuti40" path="res://fence.tscn" id="9_hlstx"]

[sub_resource type="Curve2D" id="Curve2D_jdr6p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -3, -8, 0, 0, 0, 0, 1149, -6, 0, 0, 0, 0, 1154, 632.423, 0, 0, 0, 0, 59.9431, 633.401, 0, 0, 0, 0, -1.0043, 630.468, 0, 0, 0, 0, 0.323601, 1.60672, 0, 0, 0, 0, -1, -10, 0, 0, 0, 0, -3, -8)
}
point_count = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsct3"]
size = Vector2(38.425, 4.68748)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ewxg"]
size = Vector2(57.6, 2.85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gg3q6"]
size = Vector2(1170, 88)

[node name="Level2" type="Node2D"]
script = ExtResource("1_srq5y")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LightTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(-2.99483, 8.2269)
scale = Vector2(1.00086, 1.02269)
curve = SubResource("Curve2D_jdr6p")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-3, -8)
rotation = 0.00173611

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2(39, 53)
stream = ExtResource("2_2dihh")

[node name="HUD" parent="." instance=ExtResource("2_oibbv")]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.458824, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 647.0
texture = ExtResource("4_ghilw")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(559, 559)

[node name="Sola" parent="." instance=ExtResource("5_4254d")]
z_index = 2
position = Vector2(593, 576)
slide_on_ceiling = false

[node name="Camera2D" type="Camera2D" parent="Sola"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1151
limit_bottom = 652
position_smoothing_enabled = true
position_smoothing_speed = 8.0
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="Sola/Camera2D"]

[node name="TextureRect" type="TextureRect" parent="Sola/Camera2D/CanvasLayer"]
offset_left = -2.0
offset_top = -2.0
offset_right = 1152.0
offset_bottom = 662.0
texture = ExtResource("6_mnwns")
expand_mode = 1

[node name="MonsterBounds" type="StaticBody2D" parent="." groups=["monster_bounds"]]
position = Vector2(798, -1008)
scale = Vector2(25, 25)
disable_mode = 1
collision_layer = 64
collision_mask = 0

[node name="Left" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(-34.56, 53.32)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_gsct3")

[node name="Bottom" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(-8.12, 70.28)
shape = SubResource("RectangleShape2D_6ewxg")

[node name="Top" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(-7.56, 36.16)
shape = SubResource("RectangleShape2D_6ewxg")

[node name="Right" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(16.76, 53.44)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gsct3")

[node name="Bounds" type="StaticBody2D" parent="." groups=["bounds"]]
position = Vector2(38, -48)
scale = Vector2(20, 20)
disable_mode = 1
collision_layer = 128
collision_mask = 0

[node name="Left" type="CollisionShape2D" parent="Bounds"]
position = Vector2(-4.2, 18.6)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_gsct3")

[node name="Bottom" type="CollisionShape2D" parent="Bounds"]
position = Vector2(26.85, 36.45)
shape = SubResource("RectangleShape2D_6ewxg")

[node name="Top" type="CollisionShape2D" parent="Bounds"]
position = Vector2(26.9, 0.85)
shape = SubResource("RectangleShape2D_6ewxg")

[node name="Right" type="CollisionShape2D" parent="Bounds"]
position = Vector2(57.9, 18.35)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gsct3")

[node name="DialogueBox" parent="." instance=ExtResource("6_yqxfd")]

[node name="Lamps" type="Node" parent="."]

[node name="Lamp" parent="Lamps" instance=ExtResource("6_drrrc")]
z_index = 1
position = Vector2(228, 75)

[node name="Lamp2" parent="Lamps" instance=ExtResource("6_drrrc")]
z_index = 1
position = Vector2(230, 448)

[node name="Lamp3" parent="Lamps" instance=ExtResource("6_drrrc")]
z_index = 1
position = Vector2(911, 71)

[node name="Lamp4" parent="Lamps" instance=ExtResource("6_drrrc")]
z_index = 1
position = Vector2(917, 450)

[node name="Lamp5" parent="Lamps" instance=ExtResource("6_drrrc")]
z_index = 1
position = Vector2(232, 259)

[node name="Lamp6" parent="Lamps" instance=ExtResource("6_drrrc")]
z_index = 1
position = Vector2(916, 261)

[node name="Level_3" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_3"]
position = Vector2(575, -14)
shape = SubResource("RectangleShape2D_gg3q6")

[node name="DialogueBox2" parent="." instance=ExtResource("6_yqxfd")]

[node name="Fences" type="Node" parent="."]

[node name="Fence" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(61, 22)

[node name="Fence2" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(147, 22)

[node name="Fence3" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(232, 22)

[node name="Fence4" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(318, 22)

[node name="Fence5" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(404, 22)

[node name="Fence6" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(490, 22)

[node name="Fence7" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(575, 22)

[node name="Fence8" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(662, 22)

[node name="Fence9" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(748, 22)

[node name="Fence10" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(833, 22)

[node name="Fence11" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(919, 22)

[node name="Fence12" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(1005, 22)

[node name="Fence13" parent="Fences" instance=ExtResource("9_hlstx")]
position = Vector2(1091, 22)

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
[connection signal="damage" from="Sola" to="." method="change_health"]
[connection signal="heal" from="Sola" to="." method="heal"]
[connection signal="light_enter" from="Sola" to="." method="shine"]
[connection signal="light_exit" from="Sola" to="." method="flicker"]
